<?xml version="1.0" encoding="utf-8"?>

<!--
 * Created by 
 * FrogoBox Inc License
 * =========================================
 * 
 * Copyright (C) .      
 * All rights reserved
 * 
 * Name     : Muhammad Faisal Amir
 * E-mail   : faisalamircs@gmail.com
 * Line     : bullbee117
 * Phone    : 081357108568
 * Majors   : D3 Teknik Informatika 2016
 * Campus   : Telkom University
 * 
 * id.amirisback.frogobox
 * 
 -->

<resources>

    <!--activity_main.xml-->
    <item type="id" name="main_layout"/> <!--LinearLayout-->
    <item type="id" name="main_appbarlayout"/> <!--AppBarLayout-->
    <item type="id" name="main_toolbar"/> <!--ToolBar-->
    <item type="id" name="main_tablayout"/> <!--TabLayout-->
    <item type="id" name="main_viewpager"/> <!--ViewPager-->
    <item type="id" name="main_fragment"/> <!--Fragment-->
    <item type="id" name="detail_frame_layout"/> <!--Frame_Layout-->

    <!--activity_detail.xml-->
    <item type="id" name="detail_framelayout"/> <!--FrameLayout-->

    <!--content_catatan_button.xml-->
    <item type="id" name="layout_catatan_button_jam_shubuh"/> <!--LinearLayout-->
    <item type="id" name="layout_catatan_button_jam_dzuhur"/> <!--LinearLayout-->
    <item type="id" name="layout_catatan_button_jam_ashar"/> <!--LinearLayout-->
    <item type="id" name="layout_catatan_button_jam_maghrib"/> <!--LinearLayout-->
    <item type="id" name="layout_catatan_button_jam_isya"/> <!--LinearLayout-->
    <item type="id" name="checkbox_catatan_button_jam_shubuh"/> <!--Checkbox-->
    <item type="id" name="checkbox_catatan_button_jam_dzuhur"/> <!--Checkbox-->
    <item type="id" name="checkbox_catatan_button_jam_ashar"/> <!--Checkbox-->
    <item type="id" name="checkbox_catatan_button_jam_maghrib"/> <!--Checkbox-->
    <item type="id" name="checkbox_catatan_button_jam_isya"/> <!--Checkbox-->
    <item type="id" name="textview_catatan_button_jam_shubuh"/> <!--TextView-->
    <item type="id" name="textview_catatan_button_jam_dzuhur"/> <!--TextView-->
    <item type="id" name="textview_catatan_button_jam_ashar"/> <!--TextView-->
    <item type="id" name="textview_catatan_button_jam_maghrib"/> <!--TextView-->
    <item type="id" name="textview_catatan_button_jam_isya"/> <!--TextView-->

    <!--content_statistik_harian.xml-->
    <item type="id" name="textview_harian_shalat"/> <!--TextView-->
    <item type="id" name="textview_harian_waktu"/> <!--TextView-->
    <item type="id" name="imageview_harian_shalat"/> <!--ImageView-->

    <!--content_statistik_update.xml-->
    <item type="id" name="textview_statistik_update"/> <!--TextView-->

    <!--content_tatacara_image.xml-->
    <item type="id" name="tatacara_imageview"/> <!--ImageView-->

    <!--content_tatacara_text_niat.xml-->
    <item type="id" name="niat_textview_shalat"/> <!--TextView-->
    <item type="id" name="niat_textview_rakaat"/> <!--TextView-->
    <item type="id" name="niat_textview_arab"/> <!--TextView-->
    <item type="id" name="niat_textview_latin_arab"/> <!--TextView-->
    <item type="id" name="niat_textview_arti"/> <!--TextView-->

    <!--content_tatacara_text_doa.xml-->
    <item type="id" name="doa_linearlayout"/> <!--LinearLayout-->
    <item type="id" name="doa_setelah_shalat_arab"/> <!--TextView-->
    <item type="id" name="doa_setelah_shalat_latin"/> <!--TextView-->
    <item type="id" name="doa_setelah_shalat_arti"/> <!--TextView-->

    <!--fragment_tatacara_text.xml-->
    <item type="id" name="tatacara_listview_text"/> <!--ListView-->

    <!--fragment_tatacara_image.xml-->
    <item type="id" name="tatacara_relativelayout"/> <!--RelativeLayout-->
    <item type="id" name="tatacara_sliderimage_viewpager"/> <!--ViewPager-->
    <item type="id" name="tatacara_sliderdots_linearLayout"/> <!--LinearLayout-->

    <!--fragment_catatan.xml-->
    <item type="id" name="catatan_linearlayout_container"/> <!--LinearLayout-->
    <item type="id" name="catatan_textview_bismillah"/> <!--TextView-->
    <item type="id" name="catatan_textview_tanggal"/> <!--TextView-->
    <item type="id" name="catatan_textview_shalat"/> <!--TextView-->
    <item type="id" name="catatan_textview_hadist_arab"/> <!--TextView-->
    <item type="id" name="catatan_textview_hadist_text"/> <!--TextView-->
    <item type="id" name="catatan_button_catat_ibadah"/> <!--Button-->

    <!--fragment_jadwal.xml-->
    <item type="id" name="jadwal_textview_shalat"/> <!--TextView-->
    <item type="id" name="jadwal_textview_hitungmundur"/> <!--TextView-->
    <item type="id" name="jadwal_textview_shubuh"/> <!--TextView-->
    <item type="id" name="jadwal_textview_dzuhur"/> <!--TextView-->
    <item type="id" name="jadwal_textview_ashar"/> <!--TextView-->
    <item type="id" name="jadwal_textview_maghrib"/> <!--TextView-->
    <item type="id" name="jadwal_textview_isya"/> <!--TextView-->

    <!--fragment_statistik_harian_harian.xml-->
    <item type="id" name="statistik_cardview_judul"/> <!--CardView-->
    <item type="id" name="statistik_progress_bar"/> <!--ProgressBar-->
    <item type="id" name="statistik_textview_bar"/> <!--TextView-->
    <item type="id" name="statistik_list_data"/> <!--ListView-->
    <item type="id" name="statistik_view_emptyview"/> <!--RelativeLayout-->

    <!--fragment_kiblat.xml-->
    <item type="id" name="textview_arah_kabah"/> <!--TextView-->
    <item type="id" name="textview_lokasi"/> <!--TextView-->
    <item type="id" name="imageview_kompas"/> <!--ImageView-->
    <item type="id" name="imageview_kompas_jarum"/> <!--ImageView-->

    <!--fragment_tatacara.xml-->
    <item type="id" name="tatacara_tablayout"/> <!--TabLayout-->
    <item type="id" name="tatacara_viewpager"/> <!--ViewPager-->

    <!--fragment_statistik.xml-->
    <item type="id" name="button_statistik_grafik"/> <!--Button-->
    <item type="id" name="button_statistik_harian"/> <!--Button-->
    <item type="id" name="framelayout_statistik"/> <!--Button-->

    <!--fragment_statistik_grafik.xml-->
    <item type="id" name="chart_id"/> <!--BarChart-->


    <item type="id" name="menu_tab_catatan"/> <!--TextView-->
    <item type="id" name="menu_tab_jadwal"/> <!--TextView-->
    <item type="id" name="menu_tab_statistik"/> <!--TextView-->
    <item type="id" name="menu_tab_kiblat"/> <!--TextView-->
    <item type="id" name="menu_tab_tatacara"/> <!--TextView-->


</resources>